--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>Movie Favourites</h1>
+<h1>Movie Favourites - Elain Polakova s00250500</h1>
 <ul>
   <li *ngFor="let movie of movies" > {{movie.title}}
        ({{movie.year}}) - Directed by {{movie.director}}
