--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>Movie Favourites - Elain Polakova s00250500</h1>
-<ul>
-  <li *ngFor="let movie of movies" > {{movie.title}}
-       ({{movie.year}}) - Directed by {{movie.director}}
 
-  </li>
-</ul>
+<div class="container">
+  <h1>Movie Favourites - Elain Polakova s00250500</h1>
+   <app-add-movie></app-add-movie>
+
+</div>
