--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
-<h1>Movie Favourites - Elain Polakova s00250500</h1>
 
 <div class="container">
   <h1>Movie Favourites - Elain Polakova s00250500</h1>
-   <app-add-movie></app-list-movie>
+   <app-add-movie></app-add-movie>
    <app-list-movies></app-list-movies>
 
 </div>
