--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,16 @@
 <div class="container">
   <h1>Movie Favourites - Elain Polakova s00250500</h1>
    <app-add-movie></app-add-movie>
-   <app-list-movies></app-list-movies>
+</div>
+
+<div class="container p-0">
+  <div class="row">
+      <div class="col-sm-6">
+        <app-list-movies (onSelectedMovie)="setSelectedMovie($event)"></app-list-movies>
+      </div>
+      <div class="col-sm-6">
+        <app-movie-detail [movieDetails]="mySelectedMovie"></app-movie-detail>
+      </div>
+  </div>
 
 </div>
