--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -1,1 +1,5 @@
-<p>movie-detail works!</p>
+<div class="container">
+     <h2>{{movieDetails.title}}</h2>
+      <p>Released in {{movieDetails.year}}, directed by {{movieDetails.director}}</p>
+
+</div>
